--- a/index.html
+++ b/index.html
@@ -2527,7 +2527,7 @@ color:var(--muted);
 <!-- Video Container -->
 <div class="video-container">
     <iframe 
-        src="https://www.youtube-nocookie.com/embed/Jx4kl2fVQ0U" 
+        src="https://www.youtube-nocookie.com/embed/gnoXPFykf-g" 
         frameborder="0" 
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
         allowfullscreen>
@@ -4538,3 +4538,4 @@ document.addEventListener('DOMContentLoaded', function() {
 </body>
 
 </html>
+
