--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Product of Prime Factors - Interactive Lecture</title>
+
+<!-- ADD SUPABASE HERE -->
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+
+
+
+
+
+
   <!-- ADD THIS FONT LINK HERE -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -2527,7 +2536,7 @@ color:var(--muted);
 <!-- Video Container -->
 <div class="video-container">
     <iframe 
-        src="https://www.youtube-nocookie.com/embed/gnoXPFykf-g" 
+        src="https://www.youtube-nocookie.com/embed/Jx4kl2fVQ0U" 
         frameborder="0" 
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
         allowfullscreen>
@@ -2940,6 +2949,7 @@ function resetAnswerRecord(questionNumber) {
         resultsTracker.unanswered++;
         questionStatuses[questionNumber] = 'unanswered';
         updateResultsSummary();
+saveLectureProgress();
     }
 }
 
@@ -4535,7 +4545,89 @@ document.addEventListener('DOMContentLoaded', function() {
 
 </div>
 
+
+
+
+
+<script>
+// ========== SUPABASE CONFIGURATION ==========
+const SUPABASE_URL = 'YOUR_PROJECT_URL_HERE';  // Replace with your actual URL
+const SUPABASE_KEY = 'YOUR_ANON_KEY_HERE';     // Replace with your actual key
+
+const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
+const LECTURE_NAME = 'Product of Prime Factors';  // This lecture's name
+
+// Get or create user ID
+function getUserId() {
+  let userId = localStorage.getItem('userId');
+  if (!userId) {
+    userId = 'user_' + Math.random().toString(36).substr(2, 9);
+    localStorage.setItem('userId', userId);
+  }
+  return userId;
+}
+
+// Save lecture progress to Supabase
+async function saveLectureProgress() {
+  const userId = getUserId();
+  
+  try {
+    const { data, error } = await supabase
+      .from('lecture_progress')
+      .upsert({
+        user_id: userId,
+        lecture_name: LECTURE_NAME,
+        correct: resultsTracker.correct,
+        partial: resultsTracker.partial,
+        incorrect: resultsTracker.incorrect,
+        total_questions: resultsTracker.totalQuestions
+      }, {
+        onConflict: 'user_id,lecture_name'  // Update if exists
+      });
+    
+    if (error) {
+      console.error('Error saving:', error);
+    } else {
+      console.log('Progress saved for', LECTURE_NAME);
+    }
+  } catch (err) {
+    console.error('Save failed:', err);
+  }
+}
+
+// Load lecture progress when page loads
+async function loadLectureProgress() {
+  const userId = getUserId();
+  
+  try {
+    const { data, error } = await supabase
+      .from('lecture_progress')
+      .select('*')
+      .eq('user_id', userId)
+      .eq('lecture_name', LECTURE_NAME)
+      .single();
+    
+    if (data && !error) {
+      resultsTracker.correct = data.correct || 0;
+      resultsTracker.partial = data.partial || 0;
+      resultsTracker.incorrect = data.incorrect || 0;
+      resultsTracker.unanswered = resultsTracker.totalQuestions - (data.correct + data.partial + data.incorrect);
+      updateResultsSummary();
+      console.log('Loaded progress for', LECTURE_NAME);
+    }
+  } catch (err) {
+    console.log('No previous progress - starting fresh');
+  }
+}
+
+// Load on page load
+document.addEventListener('DOMContentLoaded', function() {
+  loadLectureProgress();
+});
+</script>
+
+
+
 </body>
 
 </html>
-
